# point_interpretation

./: .gitignore  CMakeLists.txt  README.md  package.xml
other/objectDetection/: server.py
point/: CMakeLists.txt  package.xml
point/include/: Client.h  SubscribeToKinect.h
point/src/: Client.cpp  SubscribeToKinect.cpp  point_interpretation.cpp
